--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -21,6 +21,8 @@ $gray-300: #e2e8f0;
 $gray-400: #a0aec0;
 $gray-500: #718096;
 
+$transparent-20: rgba(0, 0, 0, 0.2);
+
 //
 // Icon sizes
 $ico-base: 1.25rem;
@@ -37,3 +39,7 @@ $shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
 //
 // Radius
 $radius: 1rem;
+
+//
+// Paddings
+$padding: 0.75rem;
