chore: test-case

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <app-toolbar></app-toolbar>
 
 <div class="primary-outlet">
-  <!-- <router-outlet></router-outlet> -->
+  <router-outlet></router-outlet>
   <app-pokemon
     type="Grass"
     img="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
@@ -12,3 +12,7 @@
     name="Bulbasaur"
   ></app-pokemon>
 </div>
+
+<bad-modal-plain>
+  <ng-container modal> Test </ng-container>
+</bad-modal-plain>
