feat: loading state (rough)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,10 @@
     img="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
     id="1"
     name="Bulbasaur"
+    loading="true"
   ></app-pokemon>
 </div>
 
-<bad-modal-plain>
+<!-- <bad-modal-plain>
   <ng-container modal> Test </ng-container>
-</bad-modal-plain>
+</bad-modal-plain> -->
