--- a/src/app/core/components/pokemon/pokemon.component.html
+++ b/src/app/core/components/pokemon/pokemon.component.html
@@ -1,4 +1,4 @@
-<bad-card [img]="img" [id]="id" [name]="name">
+<bad-card [img]="img" [id]="id" [name]="name" [loading]="loading">
   <ng-container top>
     <button bad-btn-ico role="button">
       <svg-icon src="assets/svg/info.svg"></svg-icon>
