--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,9 @@
     img="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png"
     id="1"
     name="Bulbasaur"
-    loading="true"
+    [loading]="false"
   ></app-pokemon>
+  <!-- <bad-radar></bad-radar> -->
 </div>
 
 <!-- <bad-modal-plain>
