--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,5 @@
   [@fadeInOnEnter]="getRouterOutletState(o)"
   [@fadeOutOnLeave]="!getRouterOutletState(o)"
 >
-  <router-outlet #o="outlet" name="modal"></router-outlet>
+  <router-outlet #o="outlet" name="dialog"></router-outlet>
 </div>
