--- a/src/app/shared/components/modal/components/modal-plain/modal-plain.component.scss
+++ b/src/app/shared/components/modal/components/modal-plain/modal-plain.component.scss
@@ -25,7 +25,8 @@ $modal-radius: $radius;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 520px;
+  max-width: 90vw;
+  min-width: 350px;
 }
 
 .modal {
