--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <bad-nav>
   <h1>First Gen. Pokemon</h1>
+
+  <svg-icon src="assets/svg/rolling.svg" *ngIf="loading$ | async"></svg-icon>
 </bad-nav>
 <app-toolbar></app-toolbar>
 
