--- a/src/app/shared/components/nav/nav.component.scss
+++ b/src/app/shared/components/nav/nav.component.scss
@@ -3,6 +3,7 @@
 .nav {
   position: relative;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 0.75rem $body-margin-sm;
   margin: 0 -#{$body-margin-sm};
