--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <bad-nav>
   <h1>First Gen. Pokemon</h1>
 
-  <svg-icon src="assets/svg/rolling.svg" *ngIf="loading$ | async"></svg-icon>
+  <svg-icon
+    class="loader"
+    [applyClass]="true"
+    src="assets/svg/rolling.svg"
+    *ngIf="loading$ | async"
+  ></svg-icon>
 </bad-nav>
 <app-toolbar></app-toolbar>
 
