--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="media">
     <div class="img">
-      <img [src]="img" />
+      <img [alt]="imgAlt" [src]="img" />
     </div>
     <div class="content">
       <div class="title">
